fixed spacing

--- a/client/src/styles/Contact.css
+++ b/client/src/styles/Contact.css
@@ -1,194 +1,204 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
 
 .contact-container {
-    background-color: #939393;
-    box-shadow: 0px 2px 4px rgba(56, 56, 56, 0.5);
-    width: 70%;
-    padding: 1.8em;
-    position: relative;
-    font-family: 'Raleway', sans-serif;
-    margin-top: 1em;
+  background-color: #939393;
+  box-shadow: 0px 2px 4px rgba(56, 56, 56, 0.5);
+  width: 70%;
+  padding: 1.8em;
+  position: relative;
+  font-family: "Raleway", sans-serif;
+  margin-top: 1em;
 }
 
 .contact-container:after {
-    content: '';
-    position: absolute;
-    top: -60px;
-    left: -60px;
-    right: -60px;
-    bottom: -60px;
-    border: 2px solid #fbcc06;
+  content: "";
+  position: absolute;
+  top: -60px;
+  left: -60px;
+  right: -60px;
+  bottom: -60px;
+  border: 2px solid #fbcc06;
 }
 
 .contact-row:after {
-    content: '';
-    position: absolute;
-    top: -30px;
-    left: -30px;
-    right: -30px;
-    bottom: -30px;
-    border: 2px solid #32bfc3;
+  content: "";
+  position: absolute;
+  top: -30px;
+  left: -30px;
+  right: -30px;
+  bottom: -30px;
+  border: 2px solid #32bfc3;
 }
 
 .contact-center {
-    display: flex;
-    justify-content: center;
-    padding-top: 5em;
-
+  display: flex;
+  justify-content: center;
+  padding-top: 5em;
 }
 
 .contact-row {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .contact-column-one {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 100%;
-    flex: 1;
-    margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+  margin-left: 10px;
 }
 
 .contact-column-two {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 100%;
-    flex: 1;
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
 }
 
 .contact-form-container {
-    display: flex;
-    flex-direction: column;
-    line-height: 4em;
+  display: flex;
+  flex-direction: column;
+  line-height: 4em;
 }
 
 .contact-form-header {
-    font-size: 2em;
-    width: 300px;
-    color: white;
-    text-decoration: underline;
-    letter-spacing: .1em;
-    display: flex;
-    justify-content: flex-start;
-    margin-top: -15px;
+  font-size: 2.5em;
+  color: white;
+  border-bottom: 2px solid white;
+  width: 8.2em;
+  letter-spacing: 0.2em;
+  font-weight: bold;
+  display: flex;
+  justify-content: flex-start;
+  margin-top: -10px;
 }
 
 .contact-column-two-header {
-    font-size: 2.3em;
-    color: white;
-    display: flex;
-    justify-content: flex-start;
+  font-size: 2.5em;
+  font-weight: bold;
+  letter-spacing: 3px;
+  color: white;
+  display: flex;
+  justify-content: flex-start;
 }
 
 .contact-para {
-    color: white;
-    font-size: 1.3em;
-    display: flex;
-    justify-content: flex-start;
-    text-align: left;
-    line-height: 1.6em;
+  color: white;
+  font-size: 1.5em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  text-align: left;
+  line-height: 1.6em;
 }
 
 .contact-button {
-    transition: box-shadow .3s;
-    width: 5em;
-    height: 2em;
-    background-color: white;
-    border-radius: 10px;
-    font-size: 18px;
-    color: #32bfc3;
-    font-weight: bolder;
-    outline: none;
-    border: none;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, .5);
-    z-index: 1;
-
+  transition: box-shadow 0.3s;
+  width: 5em;
+  height: 2em;
+  background-color: white;
+  border-radius: 10px;
+  font-size: 18px;
+  color: #32bfc3;
+  font-weight: bolder;
+  outline: none;
+  border: none;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
 
 .contact-button:hover {
-    background-color: #32bfc3;
-    color: white;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, .8);
-
+  background-color: #32bfc3;
+  color: white;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.8);
 }
 
 .contact-button-container {
-    display: flex;
-    justify-content: center;
-    padding: 130px 150px 0px 0px;
+  display: flex;
+  justify-content: center;
+  padding: 130px 150px 0px 0px;
 }
 
 .contact-form-name-container {
-display: flex;
-justify-content: flex-start;
+  display: flex;
+  justify-content: flex-start;
 }
 
 .contact-form-email-container {
-    display: flex;
-    justify-content: flex-start;
+  display: flex;
+  justify-content: flex-start;
 }
 
 .contact-photo {
-    width: 31em;
-    margin-top: 0;
-    display: flex;
-    justify-content: center;
+  width: 35em;
+  margin-top: -10px;
+  display: flex;
+  justify-content: center;
 }
 
 .contact-para-container {
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
+.contact-name-label {
+  display: flex;
+  justify-content: flex-start;
+  color: white;
+  font-size: 1.2em;
+}
 
-label {
-    display: flex;
-    justify-content: flex-start;
-    color: white;
-    font-size: 1.2em;
+.contact-email-label {
+  display: flex;
+  justify-content: flex-start;
+  color: white;
+  font-size: 1.2em;
 }
 
 input {
-    width: 70%;
-display: flex;
-justify-content: flex-start;
-background-color: rgba(0, 0, 0, 0);
-outline: none;
-border: none;
-border-bottom: 2px solid white;
-font-size: 1em;
-color: white;
-z-index: 1;
+  width: 70%;
+  display: flex;
+  justify-content: flex-start;
+  background-color: rgba(0, 0, 0, 0);
+  outline: none;
+  border: none;
+  border-bottom: 2px solid white;
+  font-size: 1em;
+  color: white;
+  z-index: 1;
 }
 
 input:focus {
-    border-bottom-color: #fbcc06;
+  border-bottom-color: #fbcc06;
 }
 
 textarea {
-    display: flex;
-    justify-content: center;
-    width: 335px;
-    height: 100px;
-    outline: none;
-    resize: none;
-    background-color: rgba(0, 0, 0, 0);
-    border: 2px solid white;
-    color: white;
-    padding: 5px;
-    font-size: 1em;
-    position: absolute;
+  display: flex;
+  justify-content: center;
+  width: 335px;
+  height: 100px;
+  outline: none;
+  resize: none;
+  background-color: rgba(0, 0, 0, 0);
+  border: 2px solid white;
+  color: white;
+  padding: 5px;
+  font-size: 1em;
+  position: absolute;
 }
 
 textarea:focus {
-    border-color: #fbcc06;
+  border-color: #fbcc06;
 }
 
-
 .label-three {
-    font-size: 1.1em;
+  display: flex;
+  justify-content: flex-start;
+  color: white;
+  font-size: 1.2em;
+  margin-top: 5em;
 }
